# Python_for_Data_Science

./: README.md
0_Starting/ex00/: Hello.py
0_Starting/ex01/: format_ft_time.py
0_Starting/ex02/: find_ft_type.py
0_Starting/ex03/: NULL_not_found.py
0_Starting/ex04/: whatis.py
0_Starting/ex05/: building.py
0_Starting/ex06/: filterstring.py  ft_filter.py
0_Starting/ex07/: sos.py
0_Starting/ex08/: Loading.py
0_Starting/ex09/: LICENSE  README.md  pyproject.toml
0_Starting/ex09/ft_package/: count_in_list.py
1_Array/ex00/: give_bmi.py  tester.py
1_Array/ex01/: array2D.py
1_Array/ex02/: tester.py
1_Array/ex03/: zoom.py
1_Array/ex04/: load_image.py  rotate.py
1_Array/ex05/: pimp_image.py  tester.py
2_DataTable/ex00/: load_csv.py
2_DataTable/ex01/: aff_life.py
2_DataTable/ex02/: aff_pop.py
2_DataTable/ex03/: projection_life.py
3_OOP/ex01/: S1E7.py
3_OOP/ex02/: DiamondTrap.py  S1E9.py
3_OOP/ex03/: ft_calculator.py
3_OOP/ex04/: ft_calculator.py
4_Dod/ex00/: statistics.py  tester.py
4_Dod/ex01/: in_out.py
4_Dod/ex02/: callLimit.py
4_Dod/ex03/: new_student.py
Starting/ex00/: Hello.py
