[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_package"
version = "0.0.1"
description = "A simple test package"
authors = [
    { name = "hchairi", email = "hchairi@student.1337.ma" }
]
license = { text = "MIT" }
dependencies = []

[tool.setuptools]
packages = ["ft_package"]